; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_gopher.c_GopherProtocol_Construct.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_gopher.c_GopherProtocol_Construct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32* }
%struct.TYPE_11__ = type { i32, %struct.TYPE_10__, %struct.TYPE_8__, %struct.TYPE_9__ }
%struct.TYPE_8__ = type { i32* }
%struct.TYPE_9__ = type { i32* }

@.str = private unnamed_addr constant [9 x i8] c"(%p %p)\0A\00", align 1
@AsyncProtocolVtbl = common dso_local global i32 0, align 4
@GopherProtocolVtbl = common dso_local global i32 0, align 4
@GopherPriorityVtbl = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GopherProtocol_Construct(i32* %0, %struct.TYPE_10__** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_10__**, align 8
  %5 = alloca %struct.TYPE_11__*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_10__** %1, %struct.TYPE_10__*** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %4, align 8
  %8 = call i32 @TRACE(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32* %6, %struct.TYPE_10__** %7)
  %9 = call i32 (...) @URLMON_LockModule()
  %10 = call %struct.TYPE_11__* @heap_alloc_zero(i32 32)
  store %struct.TYPE_11__* %10, %struct.TYPE_11__** %5, align 8
  %11 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %11, i32 0, i32 3
  %13 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %12, i32 0, i32 0
  store i32* @AsyncProtocolVtbl, i32** %13, align 8
  %14 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %15, i32 0, i32 0
  store i32* @GopherProtocolVtbl, i32** %16, align 8
  %17 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %17, i32 0, i32 2
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 0
  store i32* @GopherPriorityVtbl, i32** %19, align 8
  %20 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %20, i32 0, i32 0
  store i32 1, i32* %21, align 8
  %22 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %22, i32 0, i32 1
  %24 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %4, align 8
  store %struct.TYPE_10__* %23, %struct.TYPE_10__** %24, align 8
  %25 = load i32, i32* @S_OK, align 4
  ret i32 %25
}

declare dso_local i32 @TRACE(i8*, i32*, %struct.TYPE_10__**) #1

declare dso_local i32 @URLMON_LockModule(...) #1

declare dso_local %struct.TYPE_11__* @heap_alloc_zero(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
